backend admin gestion authors et articles_

--- a/templates/author/_form.html.twig
+++ b/templates/author/_form.html.twig
@@ -43,6 +43,7 @@
     {{ form_row(form.name) }}
     {{ form_row(form.nameFr) }}
     {{ form_row(form.country) }}
+    {{ form_row(form.biography) }}
 </div>
 
 <div class="flex flex-col md:flex-row items-start md:items-center mt-6 border-t pt-4 border-gray-300 gap-4 md:gap-0">
