finaliser la gestion backoffice

--- a/templates/admin/admin_about/edit.html.twig
+++ b/templates/admin/admin_about/edit.html.twig
@@ -1,7 +1,7 @@
 {% extends 'admin.html.twig' %}
 
-{% block title %}Modification du document CGU{% endblock %}
+{% block title %}Modifier la page À propos{% endblock %}
 
 {% block content %}
-    {{ include('admin/admin_cgu/_form.html.twig', {'title': 'Modification du document CGU'}) }}
+    {{ include('admin/admin_about/_form.html.twig', {'title': 'Modifier la page À propos'}) }}
 {% endblock %}
