--- a/templates/admin/admin_about/new.html.twig
+++ b/templates/admin/admin_about/new.html.twig
@@ -1,7 +1,7 @@
 {% extends 'admin.html.twig' %}
 
-{% block title %}Ajouter un document CGU{% endblock %}
+{% block title %}Créer une page À propos{% endblock %}
 
 {% block content %}
-    {{ include('admin/admin_cgu/_form.html.twig', {'title': 'Ajouter un nouveau document des conditions générales'}) }}
+    {{ include('admin/admin_about/_form.html.twig', {'title': 'Créer une page À propos'}) }}
 {% endblock %}
