--- a/templates/admin/admin_article/index.html.twig
+++ b/templates/admin/admin_article/index.html.twig
@@ -7,23 +7,25 @@
     <!-- Main Content -->
     <div class="flex-1 flex flex-col bg-gray-50">
         <!-- Header -->
+
         <header class="bg-white py-6 border-b border-gray-200">
             <div class="flex flex-wrap justify-between items-center gap-4">
                 <div>
                     <h1 class="text-2xl font-semibold text-gray-900">
-                        تقارير آوال فيمينا  
-                    </h1>
+                    تقارير آوال فيمينا
+                </h1>
                 </div>
-                <a href="{{ path('app_admin_article_new') }}"
-                   class="bg-teal-600 text-white px-4 py-2 rounded-lg flex items-center hover:bg-teal-700 transition duration-200">
+               <a href="{{ path('app_admin_article_new') }}"
+                   class="bg-teal-600 text-white px-4 py-2 rounded-lg flex items-center hover:bg-teal-700 transition duration-200 mr-4">
                     <svg class="w-5 h-5 mr-2" fill="currentColor" viewBox="0 0 20 20">
                         <path fill-rule="evenodd" d="M10 3a1 1 0 011 1v5h5a1 1 0 110 2h-5v5a1 1 0 11-2 0v-5H4a1 1 0 110-2h5V4a1 1 0 011-1z" clip-rule="evenodd"></path>
                     </svg>
-                    Ajouter un article
+                   اضافة تقرير جديد
                 </a>
             </div>
             <hr class="text-gray-300 mt-4 mb-2">
         </header>
+  
 
         <!-- Search Bar -->
         <div class="pt-2 pb-4 rounded-t-lg flex justify-end bg-white mb-[-8px] container-table-box-shadow">
@@ -58,25 +60,25 @@
                         <table class="w-full min-w-[800px]">
                             <thead class="bg-light-gray-300 border-b border-t border-light-gray-200 rounded-t-lg">
                             <tr>
-                                <th class="px-6 py-3 text-left text-xs font-medium text-gray-600 tracking-wider whitespace-nowrap">
-                                    Titre
+                                <th class="px-6 py-3 text-right text-xs font-medium text-gray-600 tracking-wider whitespace-nowrap">
+                                    العنوان
                                 </th>
                            
-                             <th class="px-6 py-3 text-left text-xs font-medium text-gray-600 tracking-wider whitespace-nowrap">
-                                    Auteur
+                             <th class="px-6 py-3 text-right text-xs font-medium text-gray-600 tracking-wider whitespace-nowrap">
+                                    الكاتب
                                 </th>
-                                <th class="px-6 py-3 text-left text-xs font-medium text-gray-600 tracking-wider whitespace-nowrap">
-                                    Date de création
+                                <th class="px-6 py-3 text-right text-xs font-medium text-gray-600 tracking-wider whitespace-nowrap">
+                                   تاريخ الإنشاء
                                 </th>
-                                <th class="px-6 py-3 text-left text-xs font-medium text-gray-600 tracking-wider whitespace-nowrap">
-                                    Mise à jour
+                                <th class="px-6 py-3 text-right text-xs font-medium text-gray-600 tracking-wider whitespace-nowrap">
+                                   تاريخ التحديث
                                 </th>
 
-                                <th class="px-6 py-3 text-left text-xs font-medium text-gray-600 tracking-wider whitespace-nowrap">
-                                    Status
+                                <th class="px-6 py-3 text-right text-xs font-medium text-gray-600 tracking-wider whitespace-nowrap">
+                                    الحالة
                                 </th>
-                                <th class="px-6 py-3 text-left text-xs font-medium text-gray-600 tracking-wider whitespace-nowrap">
-                                    Actions
+                                <th class="px-6 py-3 text-right text-xs font-medium text-gray-600 tracking-wider whitespace-nowrap">
+                                    الإجراءات
                                 </th>
                             </tr>
                             </thead>
