--- a/templates/components/navbar.html.twig
+++ b/templates/components/navbar.html.twig
@@ -9,13 +9,15 @@
 		<div class="flex justify-between items-center h-16">
 			<div class="flex items-center">
 				<a href="/">
-					<img src="{{ asset('build/images/logo.svg') }}" alt="Logo" width="116" height="46">
+					<img src="{{ asset('build/images/logoo.svg') }}" alt="Logo" width="116" height="46">
 				</a>
 				<div class="hidden md:block">
 					<div class="ml-10 flex items-baseline space-x-4 md:space-x-6 lg:space-x-8">
 						<a href="{{ path('home') }}" class="text-gray-600 hover:text-teal-600 px-2 md:px-2 lg:px-3 py-2 text-xs md:text-xs lg:text-sm font-semibold">العدد الحالي</a>
 						<a href="{{ path('about') }}" class="text-gray-600 hover:text-teal-600 px-2 md:px-2 lg:px-3 py-2 text-xs md:text-xs lg:text-sm font-semibold">من نحن</a>
-							<a href="{{ path('article_index') }}" class="text-gray-600 hover:text-teal-600 px-2 md:px-2 lg:px-3 py-2 text-xs md:text-xs lg:text-sm font-semibold"> أرشيف أوال فيمينا</a>						<a href="{{ path('contact') }}" class="text-gray-600 hover:text-teal-600 px-2 md:px-2 lg:px-3 py-2 text-xs md:text-xs lg:text-sm font-semibold">اتصل بنا</a>
+						<a href="{{ path('article_index') }}" class="text-gray-600 hover:text-teal-600 px-2 md:px-2 lg:px-3 py-2 text-xs md:text-xs lg:text-sm font-semibold">
+							أرشيف أوال فيمينا</a>
+						<a href="{{ path('contact') }}" class="text-gray-600 hover:text-teal-600 px-2 md:px-2 lg:px-3 py-2 text-xs md:text-xs lg:text-sm font-semibold">اتصل بنا</a>
 					</div>
 
 				</div>
@@ -63,9 +65,8 @@
 							</form>
 						</div>
 					</div>
-				
-				{% endif %}
 
+				{% endif %}
 
 
 			</div>
@@ -91,18 +92,18 @@
 					<div class="border-t border-gray-200 pt-4 pb-3">
 						<div class="space-y-1">
 							<a href="{% if is_granted('ROLE_MANAGER') or is_granted('ROLE_ADMIN') %} {{ path('app_admin_user_show',{'id':app.user.id}) }}" {% else %} {{ path('app_user_show',{'id':app.user.id} ) }} {% endif %} "
-																																                            class=" text-gray-700 text-sm hover:text-teal-700 block px-3 py-2"
-																																                            >
-																																                            {{ 'Navbar.myProfile'|trans }}
-																																                            </a>
+																																								                            class=" text-gray-700 text-sm hover:text-teal-700 block px-3 py-2"
+																																								                            >
+																																								                            {{ 'Navbar.myProfile'|trans }}
+																																								                            </a>
 								
-																																                            <a
-																																                                    href=" {{ dashboardPath }} "
-																																                                    class=" text-gray-700 text-sm hover:text-teal-700 block px-3 py-2"
-																																                            >
-																																                                {{ dashboardName }}
-																																                            </a>
-																																                            <form method=" post" action=" {{ path('app_logout') }} " class=" w-full">
+																																								                            <a
+																																								                                    href=" {{ dashboardPath }} "
+																																								                                    class=" text-gray-700 text-sm hover:text-teal-700 block px-3 py-2"
+																																								                            >
+																																								                                {{ dashboardName }}
+																																								                            </a>
+																																								                            <form method=" post" action=" {{ path('app_logout') }} " class=" w-full">
 								<input type="hidden" name="_csrf_token" value="{{ csrf_token('logout') }}">
 								<button type="submit" class="text-gray-700 text-sm hover:text-teal-700 block px-3 py-2 w-full text-left hover:cursor-pointer">
 									{{ 'Navbar.logout'|trans }}
