--- a/templates/texte/edit.html.twig
+++ b/templates/texte/edit.html.twig
@@ -5,7 +5,7 @@
 {% block content %}
     <h1>Edit Texte</h1>
 
-    {{ include('texte/_form.html.twig', {'button_label': 'Update'}) }}
+    {{ include('texte/_form.html.twig', {'button_label': 'Update', 'image': image, 'media': media}) }}
 
     <a href="{{ path('app_texte_index') }}">back to list</a>
 
