init name project

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>
 			{% block title %}{% endblock %}
-			- Sfifa</title>
+			- Awal</title>
 
 		{% block stylesheets %}
 			{{ encore_entry_link_tags('app') }}
