--- a/templates/common/_ogBalises.html.twig
+++ b/templates/common/_ogBalises.html.twig
@@ -3,14 +3,14 @@
     <meta property="og:description" content="Découvrez notre Glossaire Darija-Français-Arabe pour enrichir votre vocabulaire et mieux comprendre la langue marocaine.">
     <meta property="og:url" content="{{ url }}">
     <meta property="og:type" content="article">
-    <meta property="og:site_name" content="Glossaire Sfifa">
+    <meta property="og:site_name" content="Awal">
     <meta property="og:locale" content="fr_FR">
     <meta property="og:image" content="{{ imageUrl}}">
     <meta property="og:image:secure_url" content="{{ imageUrl}}" />
     <link rel="image_src" href="{{ imageUrl}}" />
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
-    <meta property="og:image:alt" content="{{ title }} - Glossaire Sfifa">
+    <meta property="og:image:alt" content="{{ title }} - Awal">
     <meta property="og:image:type" content="{{ imageExtension }}" />
 
     {# Twitter Card tags #}
@@ -18,10 +18,10 @@
     <meta name="twitter:image" content="{{ imageUrl }}">
     <meta name="twitter:title" content="{{ title }}">
     <meta name="twitter:description" content="Découvrez notre Glossaire Darija-Français-Arabe pour enrichir votre vocabulaire et mieux comprendre la langue marocaine.">
-    <meta name="twitter:image:alt" content="{{ title }} - Glossaire Sfifa">
-    <meta name="twitter:site" content="@glossaire_sfifa">
-    <meta name="twitter:creator" content="@glossaire_sfifa">
-    <meta name="author" content="Glossaire Sfifa">
+    <meta name="twitter:image:alt" content="{{ title }} - Awal">
+    <meta name="twitter:site" content="@Awal">
+    <meta name="twitter:creator" content="@Awal">
+    <meta name="author" content="Awal">
 
     {# Tags supplémentaires pour une meilleure compatibilité #}
     <meta name="description" content="Découvrez notre Glossaire Darija-Français-Arabe pour enrichir votre vocabulaire et mieux comprendre la langue marocaine.">
