add editor textArea

--- a/templates/admin/admin_about/_form.html.twig
+++ b/templates/admin/admin_about/_form.html.twig
@@ -168,7 +168,7 @@
                 return;
             }
 
-            const element = $('#cgu_form_content');
+            const element = $('#about_form_content');
             if (element.length === 0) {
                 setTimeout(initSummernote, 100);
                 return;
