--- a/templates/texte/_form.html.twig
+++ b/templates/texte/_form.html.twig
@@ -60,7 +60,7 @@
                 return;
             }
 
-            const element = $('#texte_form_content');
+            const element = $('#texte_content');
             if (element.length === 0) {
                 setTimeout(initSummernote, 100);
                 return;
