--- a/templates/emails/security/confirmation_email.html.twig
+++ b/templates/emails/security/confirmation_email.html.twig
@@ -1,14 +1,13 @@
 <p>Bonjour,</p>
 
 <p>
-	Veuillez confirmer votre adresse e-mail en cliquant sur le lien suivant :
-	<br><br>
-	<a href="{{ signedUrl|raw }}">Confirmer mon e-mail</a>.
-		    Ce lien expirera dans
-	{{ expiresAtMessageKey|trans(expiresAtMessageData, 'VerifyEmailBundle') }}.
+    Veuillez confirmer votre adresse e-mail en cliquant sur le lien suivant :
+    <br><br>
+    <a href="{{ signedUrl|raw }}">Confirmer mon e-mail</a>.
+    Ce lien expirera dans {{ expiresAtMessageKey|trans(expiresAtMessageData, 'VerifyEmailBundle') }}.
 </p>
 
 <p>
-	Cordialement,<br>
-	L'équipe awal
+    Cordialement,<br>
+    L'équipe Awal
 </p>
