set color theme

--- a/templates/admin/admin_article/new.html.twig
+++ b/templates/admin/admin_article/new.html.twig
@@ -3,5 +3,5 @@
 {% block title %}Ajout d'un article{% endblock %}
 
 {% block content %}
-    {{ include('admin/admin_article/_form.html.twig', {'title': 'Ajouter un nouvel article'}) }}
+    {{ include('admin/admin_article/_form.html.twig', {'title': 'إضافة تقرير '}) }}
 {% endblock %}
