--- a/templates/author/new.html.twig
+++ b/templates/author/new.html.twig
@@ -3,9 +3,9 @@
 {% block title %}New Author{% endblock %}
 
 {% block content %}
-    <h1>Create new Author</h1>
+    <h1>اضافة كاتب</h1>
 
     {{ include('author/_form.html.twig') }}
 
-    <a href="{{ path('app_author_index') }}">back to list</a>
+    <a href="{{ path('app_author_index') }}">العودة إلى القائمة</a>
 {% endblock %}
