--- a/templates/author/index.html.twig
+++ b/templates/author/index.html.twig
@@ -15,7 +15,7 @@
                     </h1>
                 </div>
                 <a href="{{ path('app_author_new') }}"
-                   class="bg-teal-600 text-white px-4 py-2 rounded-lg flex items-center hover:bg-teal-700 transition duration-200">
+                   class="bg-[#A81B60] text-white px-4 py-2 rounded-lg flex items-center hover:bg-teal-700 transition duration-200">
                     <svg class="w-5 h-5 mr-2" fill="currentColor" viewBox="0 0 20 20">
                         <path fill-rule="evenodd" d="M10 3a1 1 0 011 1v5h5a1 1 0 110 2h-5v5a1 1 0 11-2 0v-5H4a1 1 0 110-2h5V4a1 1 0 011-1z" clip-rule="evenodd"></path>
                     </svg>
