--- a/templates/common/article_card.html.twig
+++ b/templates/common/article_card.html.twig
@@ -2,7 +2,7 @@
     <a href="{{ path('article_show', {'id': article.id}) }}" class="flex items-start justify-between group">
         <img src="{{ article.image ? '/uploads/' ~ article.image.name : asset('build/images/default/placeholder.jpg') }}" alt="{{ article.titre }}" class="w-full h-48 object-cover">
         <div class="p-5">
-            <p class="text-sm text-teal-600 mb-2">{{ article.createdBy }} • {{ article.createdAt|date('d M Y') }}</p>
+            <p class="text-sm text-teal-600 mb-2"> • {{ article.createdAt|date('d M Y') }}</p>
 
             <a href="{{ path('article_show', {'id': article.id}) }}" class="text-gray-600 mb-4 text-md flex items-center justify-between">
                 <h3 class="text-xl font-semibold text-gray-900 ">
