--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -52,7 +52,7 @@
                 </label>
                 <input type="password" name="_password" id="password" autocomplete="current-password" required
                        class="w-full px-4 py-2.5 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-primary-600 focus:border-transparent text-sm md:text-base placeholder-gray-500 h-[44px] ">
-                <a class="block cursor-pointer text-right text-primary-700 hover:text-primary-700 font-medium"
+                <a class="block cursor-pointer text-right text-[#A81B60] hover:text-[#A81B60]-700 font-medium"
                    href="{{ path('app_forgot_password_request') }}">
                       {{ 'login.forgotPassword'|trans }}
                 </a>
@@ -63,7 +63,7 @@
                    value="{{ csrf_token('authenticate') }}">
 
 
-            <button class="w-full cursor-pointer bg-primary-600 text-white py-2.5 px-4 rounded-lg font-medium hover:bg-primary-700 active:bg-primary-700 transition duration-200 text-sm md:text-base focus:outline-none focus:ring-2 focus:ring-primary-600 focus:ring-offset-2"
+            <button class="w-full cursor-pointer bg-[#A81B60] text-white py-2.5 px-4 rounded-lg font-medium hover:bg-primary-700 active:bg-primary-700 transition duration-200 text-sm md:text-base focus:outline-none focus:ring-2 focus:ring-primary-600 focus:ring-offset-2"
                     type="submit">
                  {{ 'login.button'|trans }}
             </button>
@@ -72,7 +72,7 @@
         <div class="mt-4 md:mt-6 text-center">
             <p class="text-steel text-sm md:text-base">
                     {{ 'login.noAccount'|trans }}
-                <a href="{{ path('app_register') }}" class="text-primary-700 hover:text-primary-700 font-medium">
+                <a href="{{ path('app_register') }}" class="text-[#A81B60] hover:text-[#A81B60] font-medium">
                       {{ 'login.register'|trans }}
                 </a>
             </p>
