--- a/templates/security/resetPassword/emailForm.html.twig
+++ b/templates/security/resetPassword/emailForm.html.twig
@@ -19,7 +19,7 @@
 
     {{ form_row(form.email) }}
 
-    <button class="mt-6 w-full cursor-pointer bg-primary-600 text-white py-2.5 px-4 rounded-lg font-medium hover:bg-primary-700 active:bg-primary-700 transition duration-200 text-sm md:text-base focus:outline-none focus:ring-2 focus:ring-primary-600 focus:ring-offset-2" type="submit">
+    <button class="mt-6 w-full cursor-pointer bg-[#A81B60] text-white py-2.5 px-4 rounded-lg font-medium hover:bg-[#A81B60]-700 active:bg-[#A81B60]-700 transition duration-200 text-sm md:text-base focus:outline-none focus:ring-2 focus:ring-[#A81B60]-600 focus:ring-offset-2" type="submit">
         {{ 'resetPassword.button'|trans }}
     </button>
 
