--- a/templates/texte/index.html.twig
+++ b/templates/texte/index.html.twig
@@ -12,7 +12,7 @@
                 <div>
                    	<h1 class="text-2xl font-bold text-gray-800">نصوص آوال فيمينا</h1>
                 </div>
-             	<a href="{{ path('app_texte_new') }}" class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-primary-600 hover:bg-primary-700 transition-colors duration-200 mr-4">
+             	<a href="{{ path('app_texte_new') }}" class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-[#A81B60] hover:bg-primary-700 transition-colors duration-200 mr-4">
 				<svg class="w-4 h-4 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
 					<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6v6m0 0v6m0-6h6m-6 0H6"/>
 				</svg>
