--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -18,7 +18,16 @@
 		{% block head_scripts %}{% endblock %}
 
 		{% block ogTags %}{% endblock %}
-
+		<script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+		<link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet"/>
+		<script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+		<script>
+			document.addEventListener('DOMContentLoaded', () => {
+if (typeof $ !== 'undefined' && $.fn.select2) {
+$('.js-select2').select2({placeholder: 'Sélectionnez les contenus', allowClear: true, width: '100%', multiple: true});
+}
+});
+		</script>
 		<script>
 			// Function to handle flash messages
 function handleFlashMessages() {
