--- a/templates/components/footer.html.twig
+++ b/templates/components/footer.html.twig
@@ -1,24 +1,15 @@
-<footer class="bg-primary-600 text-white py-8 md:py-16 bg-cover bg-center" style="background-image:url({{ asset('build/images/footer/footer-bg.svg') }})">
-	<div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-		<div class="flex justify-between items-center flex-wrap  gap-x-10">
-			<div class="col-span-1 sm:col-span-2 lg:col-span-1">
-				
-			</div>
-			
-		</div>
+<!-- Footer -->
+<footer class="bg-rose-300 text-white py-16">
+	<div class="max-w-7xl mx-auto px-6">
+		<div class="text-center space-y-8">
+			<h3 class="text-4xl font-bold">
+				<span class="pink-underline">أوال فيمينا</span>
+			</h3>
+			<p class="text-xl max-w-3xl mx-auto">
+				مجلة نسائية ثقافية شهرية تعنى بالإبداع النسائي وتسليط الضوء على
 
-		<!-- Footer bottom -->
-		<div class=" md:mt-6 pt-6 md:pt-8">
-			<div class="flex flex-col sm:flex-row justify-between space-y-2 sm:space-y-0">
-				<p class="text-teal-100 text-warning-400 text-sm">
-					©
-					{{ "now"|date("Y") }}
-					{{ 'Footer.copyright'|trans }}
-				</p>
-				<div class="flex space-x-4 md:space-x-6">
-				
-				</div>
-			</div>
+				{{ 'now'|date('Y') }}
+				أوال فيمينا. جميع الحقوق محفوظة.</p>
 		</div>
 	</div>
-</footer>
+</div></footer>
