--- a/templates/error/error.html.twig
+++ b/templates/error/error.html.twig
@@ -1,22 +1,24 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <main class="min-h-screen bg-white">
-        {% block content %}
-            <section class="py-16">
-                <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-                    <div id="noResults" class="text-center py-12">
-                        <div class="flex justify-center mb-8">
-                            <img src="{{ asset('build/images/icons/empty-state.svg') }}" width="425" height="310" alt="No Results" class="w-full h-[140px] md:w-[425px] md:min-w-[425px] md:h-[310px] md:min-h-[310px]">
-                        </div>
-                        <h3 class="text-3xl font-semibold text-gray-900 mb-6">Oups, une erreur s'est produite! </h3>
+	<main class="min-h-screen bg-white">
+		{% block content %}
+			<section class="py-16">
+				<div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+					<div id="noResults" class="text-center py-12">
 
-                        <div  class="text-3xl font-semibold text-red-400 mb-6"> Erreur : {{ status_code }}</div>
+						<h3 class="text-3xl font-semibold text-gray-900 mb-6">Oups, une erreur s'est produite!
+						</h3>
 
-                        <a class="bg-primary-600 text-white px-6 py-3 rounded-lg hover:bg-primary-700 transition duration-200" href="{{ path('home') }}">  {{ 'common.backToHome'|trans }}</a>
-                    </div>
-                </div>
-            </section>
-        {% endblock %}
-    </main>
+						<div class="text-3xl font-semibold text-red-400 mb-6">
+							Erreur :
+							{{ status_code }}</div>
+
+						<a class="bg-rose-500 text-white px-6 py-3 rounded-lg hover:bg-primary-700 transition duration-200" href="{{ path('home') }}">
+							{{ 'common.backToHome'|trans }}</a>
+					</div>
+				</div>
+			</section>
+		{% endblock %}
+	</main>
 {% endblock %}
