--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,10 +1,41 @@
 {% extends 'public.html.twig' %}
-{% block title %} {{ 'Navbar.accueil'|trans }}{% endblock %}
-
-{% block content %}
-
-<p>HOME</p>
-
+{% block title %}
+	{{ 'Navbar.accueil'|trans }}
 {% endblock %}
 
+{% block content %}
+	{% include 'home/sections/hero.html.twig' %}
 
+	{% include 'home/sections/numero.html.twig' %}
+
+	{% include 'home/sections/about.html.twig' %}
+
+	{% include 'home/sections/archive.html.twig' %}
+
+	{% include 'home/sections/authors.html.twig' %}
+
+	{% include 'home/sections/contact.html.twig' %}
+
+
+	<script>
+		// Smooth scroll for navigation
+document.querySelectorAll('a[href^="#"]').forEach((anchor) => {
+anchor.addEventListener("click", function (e) {
+e.preventDefault();
+const target = document.querySelector(this.getAttribute("href"));
+if (target) {
+target.scrollIntoView({behavior: "smooth", block: "start"});
+}
+});
+});
+
+// Character counter for textarea
+const textarea = document.querySelector("textarea");
+const charCount = textarea.nextElementSibling.querySelector("span:last-child");
+
+textarea.addEventListener("input", function () {
+charCount.textContent = this.value.length;
+});
+	</script>
+
+{% endblock %}
